asset/main.css
/* ... */
#logo {
    display: block;
    cursor: pointer;
    padding: 0.5rem;
}


nav li:first-child {
    margin-right: auto;
}

nav .navbar li:last-child {
    margin-left: 1rem;
}

nav button {
    color: black;
    background-color: white;
    padding: 0.7em 2em ;
    border-radius: 20px;
    cursor: pointer;
    border: transparent;
    box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
    position: relative;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: 'roboto flex';
    font-weight: 300;
    transition: ease-in-out 0.2s;

}

nav button:hover {
    opacity: 0.8;
}

/* Sidebar */
nav .sidebar {
    position: fixed;
    top: 0;
    right: 0;
    height: 100vh;
    width: 250px;
    z-index: 999;
    background-color: white;
    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
    display: none;
    flex-direction: column;
    justify-content: flex-start;
    align-items: stretch;
    margin: 0;
}

nav .sidebar li a {
    display: flex;
    justify-content: flex-start;
    gap: 0.5rem;
    width: 100%;
    padding: 1rem 2rem;
}

nav .sidebar .hideOnMobile.last{
    margin: 0;
}

/* Main */
main {
    width: 100%;
}

/* Hero section */
.hero {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center top;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-radius: 30px;
    width: 90%;
    margin: 2rem auto 5rem auto; 
    position: relative;
    padding: 0 0 3rem 0;
}

/* Hero_sec decorative lines */

.hero .lines {
    display: flex;
    justify-content: center;
    gap: 10px;
    width: 100%;
    padding: 0 1rem;
    margin: 3.5rem 0 0 0;
    position: absolute;
    top: 0;

}

.hero .lines .wheel_pic {
    display: block;
}

#cartwheel {
    display: flex;
}

.hero .lines .batch {
    display: flex;
    flex-direction: column;
    gap: 10px;
    flex-grow: 1;
}

.hero .lines .batch span {
    display: block;
    height: 5px;
}


.hero .lines .batch.one .line.one {
    background: black;
    width: 100%;
}

.hero .lines .batch.one .line.two {
    background: #FFEA60;
    width: 70%;
    align-self: flex-end;
}

.hero .lines .batch.two .line.one {
    background: #3700FF;
    width: 100%;
}

.hero .lines .batch.two .line.two {
    background: #FF0000;
    width: 70%;
    align-self: flex-start;
}

/* Hero_sec header */
.hero .content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: auto;
    margin: 5rem 0 0 0 ;
    padding: 0 2rem;
}

.hero .content h1 {
    font-family: "Roboto Condensed", arial;
    font-size: clamp(0.5rem, calc(10vw - 1rem), 3rem);
    font-weight: 500;
    font-style: italic;
    text-align: center;
    margin: 0 0 2rem 0;
}

.hero .content h1 .span {
    font-family: "Roboto Condensed", arial;
    font-weight: 400;
    font-style: italic;
    text-shadow:
    -0.7px -0.7px 0 #000,
     0   -0.7px 0 #000,
     0.7px -0.7px 0 #000,
     0.7px  0   0 #000,
     0.7px  0.7px 0 #000,
     0    0.7px 0 #000,
    -0.7px  0.7px 0 #000,
    -0.7px  0   0 #000;
}

.hero .content h1 .span.rent {
    color: #FFCC00;
}

.hero .content h1 .span.ramuros {
    color: #8D230F;
}

/* Hero_sec paragraph */
.hero .content p {
    font-family: 'roboto condensed';
    font-size: 1.2rem;
    font-weight: 300;
    line-height: 1.5;
    margin: 0 0 2rem 0;
    text-align: center;
}

/* Hero_sec list */
.hero .content .list_container {
    display: flex;
    justify-content: space-evenly;
    list-style: none;
    gap: 4rem;
    margin: 0 0 2rem 0;
    width: 100%;
}

.hero .content .list_container li {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 0.2rem;
    font-family: 'roboto slab';
}

.hero .content .list_container li img {
    width: fit-content;
}

/* Hero_sec button */
.hero .content button {
    font-family: 'roboto condensed';
    cursor: pointer;
    padding: 1rem 2rem;
    font-weight: 400;
    font-size: 1rem;
    background-color: #8D230F;
    color: white;
    border: 2px solid transparent;
    transition: ease-in-out 0.3s;
    width: fit-content;
}

.hero .content button:hover {
    background-color: white;
    color: black;
    border-color: #8D230F;

}

/* Mid main kuys */
.mid {
    display: grid;
    grid-template-columns: minmax(0, 1fr);
    padding: 0 7rem;
    width: 100%;
    gap: 3rem;
    margin-bottom: 5rem;
}

/* Upcoming events */
.upcoming_container {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    width: 100%;
    /* overflow-x: hidden; */
}

.upcoming_container .title_wrapper {
    display: flex;
    justify-content: space-between;
}

.upcoming_container .title_wrapper .title {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
}

.upcoming_container .title_wrapper .title .upcoming, .v_calendar, .feedback {
    font-family: 'roboto flex';
}

.upcoming_container .title_wrapper .title .upcoming {
    font-size: 1.5rem;
    font-weight: bold;
}

.upcoming_container .title_wrapper .title .v_calendar {
    font-weight: 200;
    font-style: italic;

}

.upcoming_container .title_wrapper .title .v_calendar a {
    text-decoration: none;
    color: black;

}

.upcoming_container .title_wrapper .feedback a{
    display: flex;
    align-items: center;
    font-size: 1.5rem;
    font-weight: bold;
    text-decoration: none;
    color: black;
}

/* Sliding */
.upcoming_container .slider {
    display: flex; 
    position: relative; 
    width: 100%;
}

#upcoming_events_list {
    position: relative;
    list-style: none;
    display: flex;
    justify-content: flex-start;
    gap: 1rem;
    overflow-x: hidden;
    scroll-snap-type: x mandatory;
    width: 100%;
}

.upcoming_container .slider ul li {
    flex: 1 0 auto;
    width: calc((100% - 2rem) / 3);
    scroll-snap-align: start;
}
/* ... */

